--- a/base/tests/CMakeLists.txt
+++ b/base/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 include_directories("${PROJECT_SOURCE_DIR}/base")
 
-add_executable(atomic_unittest Atomic_unittest.cc)
+add_executable(atomic_unittest Atomic_unittest.cc Thread_test.cc)
 add_test(NAME atomic_unittest COMMAND atomic_unittest)
 
 add_executable(timestamp_unittest Timestamp_unittest.cc)
