fix pid = 0 in runInThread function

--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -1,10 +1,10 @@
-set(base_SRCS Timestamp.cc Thread.cc CurrentThread.cc CurrentThread.h)
+set(base_SRCS Timestamp.cc Thread.cc CurrentThread.cc)
 
 # 生成链接库
 add_library(fakeMuduo_base ${base_SRCS})
 
 # 添加链接库
-# target_link_libraries()
+target_link_libraries(fakeMuduo_base pthread)
 
 install(TARGETS fakeMuduo_base DESTINATION lib)
 file(GLOB HEADERS "*.h")
